--- a/index.njk
+++ b/index.njk
@@ -15,7 +15,7 @@ slides:
       url: http://www.bilmemne.com
       button: quaternary
   -
-    bgimages: img/slider/slide2.jpg
+    bgimage: img/slider/slide2.jpg
     subject: Welcome to arena 2
     h1: ABC TOTS bro 2
     content: We offer high quality Daycare Services, contact us or visit us today for more information2
@@ -24,7 +24,7 @@ slides:
       url: http://www.bilmemne.com2
       button: secondary
   -
-    bgimages: img/slider/slide2.jpg
+    bgimage: img/slider/slide2.jpg
     subject: Welcome to arena 2
     h1: ABC TOTS bro 2
     content: We offer high quality Daycare Services, contact us or visit us today for more information2
@@ -34,7 +34,7 @@ slides:
       button: secondary
 
   -
-    bgimages: img/slider/slide2.jpg
+    bgimage: img/slider/slide2.jpg
     subject: Welcome to arena 2
     h1: ABC TOTS bro 2
     content: We offer high quality Daycare Services, contact us or visit us today for more information2
