galeri ve genel düzeltmeler

--- a/css/style.css
+++ b/css/style.css
@@ -2802,7 +2802,7 @@ ul.checkmark li:before {
 /* Jumbotron */
 
 .jumbotron {
-	background: url("../img/jumbotron.jpg");
+	background: url("/img/jumbotron.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: contain;
