--- a/index.njk
+++ b/index.njk
@@ -80,7 +80,7 @@ hakkimizda:
   misyontext: misyonumuza dair yazı buraya gelecek detaylı yazı iyi olur.
   linktext: Bize Ulaşın
   url: link gelecek
-  bgimage: img/about/about2.jpg
+  bgimage: /img/about2.jpg
 
 testimonal: Ne söylediler
 testimonals:
@@ -107,7 +107,7 @@ testimonals:
 
 saglananlarbaslik: Neler Sağlıyoruz
 saglananlaralt : Çocuğunuz için en iyisi
-saglananlarimage: img/features.png
+saglananlarimage: img/imkanlar.jpg
 saglananlar:
   -
     baslik: imkan 1
