--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -111,7 +111,7 @@
                   </li>
                 {%- endfor -%}
 
-                <!-- menu item -->
+                {# <!-- menu item -->
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="gallery-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Gallery
@@ -122,17 +122,8 @@
                     <a class="dropdown-item" href="gallery3.html">Gallery Style 3</a>
                   </div>
                 </li>
-                <!-- menu item -->
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="contact-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Contact
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="contact-dropdown">
-                    <a class="dropdown-item" href="contact.html">Contact Style 1</a>
-                    <a class="dropdown-item" href="contact2.html">Contact Style 2</a>
-                    <a class="dropdown-item" href="contact3.html">Contact Style 3</a>
-                  </div>
-                </li>
+                <!-- menu item --> #}
+
                 <!-- menu item -->
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="others-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
