--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -72,7 +72,7 @@
                 <ul class="social-list float-right list-inline">
                   {%- for social in sitedata.socials -%}
                     <li class="list-inline-item">
-                      <a title="{{social.name}}" href="{{social.url | url }}">
+                      <a title="{{social.name}}" href="{{social.url | url }}" rel="noreferrer">
                         <i class="fab {{social.icon}}"></i>
                       </a>
                     </li>
@@ -91,7 +91,7 @@
         <div class="navbar container-fluid">
           <div class="container ">
             <!-- logo -->
-            <a class="nav-brand" href="index.html">
+            <a class="nav-brand" href="/">
               <img src="{{'/img/logo.png' | url}}" alt="" class="img-fluid">
             </a>
             <!-- Navbar toggler -->
@@ -123,20 +123,6 @@
                   </div>
                 </li>
                 <!-- menu item --> #}
-
-                <!-- menu item -->
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="others-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Other pages
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="others-dropdown">
-                    <a class="dropdown-item" href="blog.html">Blog Home 1</a>
-                    <a class="dropdown-item" href="blog2.html">Blog Home 2</a>
-                    <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-                    <a class="dropdown-item" href="elements.html">Elements Page</a>
-                    <a class="dropdown-item" href="404.html">404 Page</a>
-                  </div>
-                </li>
               </ul>
               <!--/ul -->
             </div>
@@ -195,7 +181,9 @@
             <h5>{{sitedata.bizeulasin}}</h5>
             <ul class="list-unstyled mt-3">
               <li class="mb-1">
-                <i class="fas fa-phone margin-icon "></i>{{sitedata.tel}}</li>
+                <i class="fas fa-phone margin-icon "></i>
+                <a href="tel:{{sitedata.tel}}">{{sitedata.tel}}</a>
+              </li>
               <li class="mb-1">
                 <i class="fas fa-envelope margin-icon"></i>
                 <a href="mailto:email@yoursite.com">{{sitedata.email}}</a>
@@ -209,7 +197,7 @@
             <ul class="social-list text-center list-inline mt-2">
               {%- for social in sitedata.socials -%}
                 <li class="list-inline-item">
-                  <a title="{{social.name}}" href="{{social.url | url }}">
+                  <a title="{{social.name}}" href="{{social.url | url }}" rel="noreferrer">
                     <i class="fab {{social.icon}}"></i>
                   </a>
                 </li>
